# Project_Analyzer

./: .gitignore  extractThis.py  test_merge_the_tools.py
backend/: manage.py  requirements.txt  tsconfig.json
backend/analyzer/: models.py  serializers.py  tests.py  urls.py  views.py
backend/analyzer/analysis_utils/: CMakeLists.txt  analyze_cpp.cpp  analyze_cpp.py  analyze_java.py  analyze_python.py  analyze_typescript.js  analyze_typescript.py  analyze_typescript.ts  compile_cpp.py
backend/analyzer/analysis_utils/pmd_custom/com/yourcompany/pmd/: FunctionCallRule.java
backend/analyzer/migrations/: 0001_initial.py
backend/analyzer/templates/: index.html
backend/backend/: settings.py  urls.py
backend/templates/: base.html
backend/tests/: test_views.py
frontend/: .gitignore  angular.json  httpd.conf  nginx.conf  package-lock.json  package.json  proxy.conf.json  tsconfig.json  vite.config.ts  webpack.config.js
frontend/src/: app.config.ts  app.routes.ts  index.html  main.server.ts  main.ts  styles.css
frontend/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
frontend/src/app/components/analysis-results/: analysis-results.component.css  analysis-results.component.html  (+2 more)
frontend/src/app/services/: analysis.service.spec.ts  analysis.service.ts  auth.service.ts
frontend/src/app/shared/: d3-graph.service.spec.ts  d3-graph.service.ts  language-visualizer.component.css  language-visualizer.component.html  language-visualizer.component.ts
frontend/src/environments/: environment.prod.ts  environment.ts
(+13 files in other folders)
